[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-bst"
description = "Bibliography style language."
version = "0.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "bst"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Daniel Bershatsky", email = "daniel.bershatsky@gmail.com" }]
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/daskol/typst-templates"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"

[tool.setuptools.exclude-package-data]
tree_sitter_bst = [
  "binding.c",
  "binding_test.py",
]
